# app/controllers/cargo_in_shippings_controller.rb
@@ -1,6 +1,10 @@
 class CargoInShippingsController < ApplicationController
-  before_action :set_cargo_in_shipping
+  before_action :set_cargo_in_shipping, except: %i[index]
   before_action :set_shipping
+
+  def index
+    @cargo_in_shippings = policy_scope(CargoInShipping).where(shipping_id: @shipping.id)
+  end
 
   def load
     authorize @shipping, :start_delivery?
@@ -21,35 +25,6 @@ class CargoInShippingsController < ApplicationController
     end
   end
 
-  def upload
-    authorize @cargo_in_shipping
-
-    unless @shipping.delivering?
-      return render json: { errors: 'delivery not in delivering status' },
-                    status: :unprocessable_entity
-    end
-
-    unless @cargo_in_shipping.may_upload?
-      return render json: { errors: 'cargo cannot be uploaded' }, status: :unprocessable_entity
-    end
-
-    if @cargo_in_shipping.upload!
-      # TODO: возможно это надо выкинуть в воркеры,
-      # но в тоже время в воркерах может быть проблема конкурентног доступа
-      ShippingFinisherService.new(@cargo_in_shipping.shipping.id).call
-
-      OrderDeliveryFinisherService.new(@cargo_in_shipping.cargo.order.id).call
-      # тут надо запустить систему для проверки связанной доставки
-      # если по доставке все грузы доставлены то закрыть достаку
-      # Так же надо запускать проверки для заказов, что если в заказах все грузы доставлены,
-      # то надо переводить заказы в статус ожидания выдачи,
-      # но только если все грузы доставлены в конечную точку
-      render 'show'
-    else
-      render json: { errors: @cargo_in_shipping.errors }, status: :unprocessable_entity
-    end
-  end
-
   private
 
   def set_shipping
@@ -57,10 +32,7 @@ class CargoInShippingsController < ApplicationController
   end
 
   def set_cargo_in_shipping
-    @cargo_in_shipping = CargoInShipping.find(params[:id])
-  end
-
-  def load_params
-    params.permit
+    # @cargo_in_shipping = CargoInShipping.find(params[:id])
+    @cargo_in_shipping = CargoInShipping.find_by(shipping_id: params[:shipping_id], cargo_id: params[:id])
   end
 end
