# app/controllers/routes_controller.rb
@@ -3,8 +3,10 @@ class RoutesController < ApplicationController
 
   def update
     authorize @route
-    user = User.includes(:roles).find(update_params['user_id'])
-    return render json: { errors: "user don't have courier role" }, status: :unprocessable_entity unless user.courier?
+    if update_params['user_id']
+      user = User.includes(:roles).find(update_params['user_id'])
+      return render json: { errors: "user don't have courier role" }, status: :unprocessable_entity unless user.courier?
+    end
 
     if @route.update(update_params)
       render :show, status: :ok
@@ -20,6 +22,6 @@ class RoutesController < ApplicationController
   end
 
   def update_params
-    params.permit(:user_id)
+    params.permit(:user_id, delivery_days: [])
   end
 end
