# config/routes.rb
@@ -11,12 +11,13 @@ Rails.application.routes.draw do
       member do
         post :add_roles
         post :remove_roles
+        post :update_roles
       end
       resources :cars
     end
     resources :cities, only: %i[index create destroy]
     resources :warehouses, except: :destroy
-    resources :orders, except: %i[destroy update] do
+    resources :orders, except: %i[update] do
       member do
         post :cargo_accepted
         post :payment
@@ -28,19 +29,21 @@ Rails.application.routes.draw do
       end
     end
 
-    resources :shippings, only: %i[index] do
+    resources :shippings, only: %i[index show] do
       member do
         post :start_load
         post :start_delivery
       end
 
-      resources :cargo_in_shippings, only: %i[] do
+      resources :cargo_in_shippings, only: %i[index] do
         member do
           post :load
           post :upload
         end
       end
     end
+
+    post 'warehouses/:warehouse_id/upload_cargo/:id', to: 'warehouses#upload_cargo'
 
     resources :routes, only: %i[update]
   end
