# swagger/v1/swagger.yaml
@@ -28,6 +28,20 @@ paths:
               required:
               - email
               - password
+  "/api/shippings/{shipping_id}/cargo_in_shippings":
+    get:
+      summary: list
+      tags:
+      - cargo_in_shipping
+      security:
+      - Bearer: {}
+      parameters:
+      - name: shipping_id
+        in: path
+        required: true
+      responses:
+        '200':
+          description: ok
   "/api/shippings/{shipping_id}/cargo_in_shippings/{id}/load":
     post:
       summary: load
@@ -150,7 +164,7 @@ paths:
                 - cargo_id
                 - shipping_id
         '422':
-          description: unprocessable_entity
+          description: not correct params
           content:
             application/json:
               schema:
@@ -168,6 +182,16 @@ paths:
                     - type: string
                 required:
                 - errors
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                warehouse_id:
+                  type: number
+              required:
+              - warehouse_id
   "/api/orders/{order_id}/cargos":
     get:
       summary: get cargos
@@ -710,6 +734,19 @@ paths:
                 - start_warehouse
                 - end_warehouse
                 - delivery_date
+    delete:
+      summary: delete order (only admin)
+      tags:
+      - orders
+      security:
+      - Bearer: {}
+      parameters:
+      - name: id
+        in: path
+        required: true
+      responses:
+        '200':
+          description: ok
   "/api/orders/{id}/cargo_accepted":
     post:
       summary: accept cargo, calc price
@@ -1140,8 +1177,11 @@ paths:
               properties:
                 user_id:
                   type: number
-              required:
-              - user_id
+                delivery_days:
+                  type: array
+                  items:
+                    type: integer
+              required: []
   "/api/shippings":
     get:
       summary: get shippings list
@@ -1290,6 +1330,126 @@ paths:
                     - type: string
                 required:
                 - errors
+  "/api/shippings/{id}":
+    get:
+      summary: show information
+      tags:
+      - shippings
+      security:
+      - Bearer: {}
+      parameters:
+      - name: id
+        in: path
+        required: true
+      responses:
+        '200':
+          description: ok
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: number
+                  route_id:
+                    type: number
+                  assignee_id:
+                    type: number
+                  assignee:
+                    type: object
+                    properties:
+                      id:
+                        type: number
+                      email:
+                        type: string
+                      firstname:
+                        type: string
+                      surname:
+                        type: string
+                      roles:
+                        type: array
+                        items:
+                          type: string
+                    required:
+                    - id
+                    - email
+                    - roles
+                  route:
+                    allOf:
+                    - type: object
+                      properties:
+                        id:
+                          type: number
+                        start_warehouse_id:
+                          type: number
+                        end_warehouse_id:
+                          type: number
+                        user_id:
+                          type: number
+                      required:
+                      - id
+                      - start_warehouse_id
+                      - end_warehouse_id
+                      - user_id
+                    - type: object
+                      properties:
+                        start_warehouse:
+                          type: object
+                          properties:
+                            id:
+                              type: number
+                            name:
+                              type: string
+                            address:
+                              type: string
+                            city_id:
+                              type: number
+                            city:
+                              type: string
+                            active:
+                              type: boolean
+                          required:
+                          - id
+                          - name
+                          - address
+                          - city_id
+                          - active
+                        end_warehouse:
+                          type: object
+                          properties:
+                            id:
+                              type: number
+                            name:
+                              type: string
+                            address:
+                              type: string
+                            city_id:
+                              type: number
+                            city:
+                              type: string
+                            active:
+                              type: boolean
+                          required:
+                          - id
+                          - name
+                          - address
+                          - city_id
+                          - active
+                      required:
+                      - start_warehouse
+                      - end_warehouse
+                  status:
+                    type: string
+                  date:
+                    type: string
+                required:
+                - id
+                - route_id
+                - assignee_id
+                - assignee
+                - status
+                - date
+                - route
   "/api/shippings/{id}/start_load":
     post:
       summary: start load
@@ -1601,8 +1761,10 @@ paths:
         schema:
           type: object
           properties:
-            q[roles_name_eq]:
-              type: string
+            q[roles_name_in][]:
+              type: array
+              items:
+                type: string
               description: Пример роль
         description: Параметры поиска с использованием Ransack
       responses:
@@ -1769,11 +1931,48 @@ paths:
                     type: string
               required:
               - roles
+  "/api/users/{id}/update_roles":
+    post:
+      summary: remove roles
+      tags:
+      - users
+      security:
+      - Bearer: {}
+      parameters:
+      - name: id
+        in: path
+        required: true
+      responses:
+        '200':
+          description: ok
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                roles:
+                  type: array
+                  items:
+                    type: string
+              required:
+              - roles
   "/api/warehouses":
     get:
       summary: return correct list
       tags:
       - Список складов
+      parameters:
+      - name: q
+        in: query
+        type: object
+        schema:
+          type: object
+          properties:
+            q[city_id_eq]:
+              type: number
+              description: Пример город
+        description: Параметры поиска с использованием Ransack
       responses:
         '200':
           description: correct response
@@ -1987,6 +2186,78 @@ paths:
                     - type: string
                 required:
                 - errors
+  "/api/warehouses/{warehouse_id}/upload_cargo/{id}":
+    post:
+      summary: update_cargo
+      tags:
+      - Список складов
+      security:
+      - Bearer: {}
+      parameters:
+      - name: warehouse_id
+        in: path
+        required: true
+      - name: id
+        in: path
+        required: true
+      responses:
+        '403':
+          description: forbidden
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    oneOf:
+                    - type: object
+                      additionalProperties:
+                        oneOf:
+                        - type: string
+                        - type: array
+                          items:
+                            type: string
+                    - type: string
+                required:
+                - errors
+        '200':
+          description: ok
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: number
+                  cargo_id:
+                    type: number
+                  shipping_id:
+                    type: number
+                required:
+                - id
+                - cargo_id
+                - shipping_id
+        '422':
+          description: unprocessable_entity
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    oneOf:
+                    - type: object
+                      additionalProperties:
+                        oneOf:
+                        - type: string
+                        - type: array
+                          items:
+                            type: string
+                    - type: string
+                required:
+                - errors
+        '404':
+          description: not correct params
 servers:
 - url: http://{defaultHost}
   variables:
